# ini-parser

./: .gitignore  CMakeLists.txt  README.md
include/: iniparser.h
src/: iniparser.cpp
